--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
 	<img height=45% width=100% src="img/welcome.jpg" alt ="Welcome To MY Portfolio!"> 
 	<div class="outer">
-		<img class ="my-pic thin-black-border"src="img/my-pic.jpg" alt="Pratyush's Picture">
+		<img class ="my-pic thin-black-border"src="img/profile.jpg" alt="Pratyush's Picture">
 		<hr>
 		<h2><b>About Me</b></h2>
 		<p>Hello, I am <b>Saumya Shukla</b> from <b>Lucknow, India</b> also known as City Of Nawabs.I am very enthusiast for learning new technologies.I also have a good hold over <b>Data Structure and Algorithms</b>.Primarily interested in Machine Learning and Software Development. I want To explore the new areas and work in a dynamic stable organization and want to Work for an organization which provides me the opportunity to improve my skills and knowledge to growth along with the organization objective.</p> 
