--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<img class ="my-pic thin-black-border"src="img/profile.jpg" alt="Pratyush's Picture">
 		<hr>
 		<h2><b>About Me</b></h2>
-		<p>Hello, I am <b>Saumya Shukla</b> from <b>Lucknow, India</b> also known as City Of Nawabs.I am very enthusiast for learning new technologies.I also have a good hold over <b>Data Structure and Algorithms</b>.Primarily interested in Machine Learning and Software Development. I want To explore the new areas and work in a dynamic stable organization and want to Work for an organization which provides me the opportunity to improve my skills and knowledge to growth along with the organization objective.</p> 
+		<p>Hello, I am <b>Saumya Shukla</b> from <b>Lucknow, India</b> also known as City Of Nawabs.I am very enthusiast for learning new technologies.I also have a good hold over <b>Data Structure and Algorithms</b>.Primarily interested in Web Development and Software Development. I want To explore the new areas and work in a dynamic stable organization and want to Work for an organization which provides me the opportunity to improve my skills and knowledge to growth along with the organization objective.</p> 
 		<hr>
 		<h2><b>Education</b></h2>
 		<p>I am Persuing B.Tech in Computer Science & Engg from <i><a href = "https://bbdu.ac.in/">Babu Banarsi Das University, Lucknow</a></i>.</p>
@@ -51,7 +51,7 @@
 		<list>
 		<ol><b>Java</b>
 		<div class="w3-light-grey w3-round" style="width:60%">
-  		<div class="w3-container w3-round w3-blue" style="width:80%">80%</div>
+  		<div class="w3-container w3-round w3-blue" style="width:80%">90%</div>
 		</div></ol>
 		<ol><b>Python</b>
 		<div class="w3-light-grey w3-round" style="width:60%">
@@ -63,7 +63,7 @@
 		</div></ol>
 		<ol><b>HTML And CSS</b>
 		<div class="w3-light-grey w3-round" style="width:60%">
-  		<div class="w3-container w3-round w3-blue" style="width:60%">60%</div>
+  		<div class="w3-container w3-round w3-blue" style="width:60%">80%</div>
 		</div></ol>
 		</list>
 		<br>
