--- a/index.html
+++ b/index.html
@@ -122,13 +122,10 @@ This is a website which provide  service to the users so they can exchange , don
 	</div>
 	<div class="footer">
 		<h2 style="color:White;">Get In Touch</h2>
-		<a href ="mailto:pratyush.patwa@gmail.com"><img height=45% width=6% src="img/gmail.png" alt ="Gmail"></a>
-		<a href ="https://www.linkedin.com/in/pratyush-patwa-6a43b2132/"><img height=45% width=6% src="img/linkedin.jfif" alt ="Linkedin"></a>
+		<a href ="mailto:soumyashuklaviya@gmail.com"><img height=45% width=6% src="img/gmail.png" alt ="Gmail"></a>
+		<a href ="https://www.linkedin.com/in/saumya-shukla-1a662619b/"><img height=45% width=6% src="img/linkedin.jfif" alt ="Linkedin"></a>
 		<a href ="https://github.com/pratyush-patwa"><img height=45% width=6% src="img/github.png" alt ="Github"></a>
-		<a href = "https://www.hackerrank.com/pratyush_patwa"><img height=45% width=6% src="img/hackerrank.png" alt ="HackerRank"></a>
-		<a href = "https://leetcode.com/pratyushpatwa/"><img height=45% width=6% src="img/leetcode.png" alt ="LeetCode"></a>
-		<a href ="https://www.techgig.com/pratyushpatwa"><img height=45% width=6% src="img/techgig.png" alt ="Techgig" ></a>
-		<a href ="https://www.codechef.com/users/pr8yush_coder"><img height=45% width=6% src="img/codechef.png" alt ="Codechef" ></a>
+		<a href = "https://www.hackerrank.com/soumyashuklaviya"><img height=45% width=6% src="img/hackerrank.png" alt ="HackerRank"></a>
 		<h3 style="color:White; text-align:center;">E-mail : soumyashuklaviya@gmail.com</h3>
 	</div>	
 	
