--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ This is a website which provide  service to the users so they can exchange , don
 		<h2 style="color:White;">Get In Touch</h2>
 		<a href ="mailto:soumyashuklaviya@gmail.com"><img height=45% width=6% src="img/gmail.png" alt ="Gmail"></a>
 		<a href ="https://www.linkedin.com/in/saumya-shukla-1a662619b/"><img height=45% width=6% src="img/linkedin.jfif" alt ="Linkedin"></a>
-		<a href ="https://github.com/pratyush-patwa"><img height=45% width=6% src="img/github.png" alt ="Github"></a>
+		<a href ="https://github.com/saumyashukla15"><img height=45% width=6% src="img/github.png" alt ="Github"></a>
 		<a href = "https://www.hackerrank.com/soumyashuklaviya"><img height=45% width=6% src="img/hackerrank.png" alt ="HackerRank"></a>
 		<h3 style="color:White; text-align:center;">E-mail : soumyashuklaviya@gmail.com</h3>
 	</div>	
